# velocut

./: .gitignore  CRATE_REVIEW_SUGGESTIONS.md  HANDOFF.md  Issues.md  RESUME.md  SPEEDRUNAI.md  cargo.toml  config.toml  howtostaticffmpeg.md  readme.md  roadmap.md  structure.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: build.yml
assets/: icon.icns
crates/velocut-core/: Cargo.toml
crates/velocut-core/src/: commands.rs  lib.rs  media_types.rs  state.rs  transitions.rs  windows.rs
crates/velocut-core/src/filters/: helpers.rs  mod.rs
crates/velocut-core/src/helpers/: geometry.rs  mod.rs  time.rs
crates/velocut-core/src/transitions/: barn_doors.rs  clock_wipe.rs  crossfade.rs  dip_to_black.rs  dip_to_white.rs  helpers.rs  iris.rs  mod.rs  push.rs  wipe.rs
crates/velocut-media/: Cargo.toml
crates/velocut-media/src/: audio.rs  decode.rs  encode.rs  lib.rs  probe.rs  waveform.rs  worker.rs
crates/velocut-media/src/encode/: audio.rs  clip.rs  hw.rs  mod.rs
crates/velocut-media/src/helpers/: log.rs  mod.rs  seek.rs  yuv.rs
crates/velocut-media/src/worker/: blend.rs  pb_thread.rs  semaphore.rs  types.rs
crates/velocut-ui/: Cargo.toml  build.rs
crates/velocut-ui/src/: app.rs  context.rs  main.rs  paths.rs  theme.rs
crates/velocut-ui/src/helpers/: clip_query.rs  format.rs  log.rs  memory_manager.rs  mod.rs  reset.rs
crates/velocut-ui/src/modules/: audio.rs  audio_module.rs  export.rs  export_module.rs  library.rs  mod.rs  preview.rs  preview_module.rs  timeline.rs  video_module.rs
src/: app.rs  main.rs  media.rs  paths.rs  state.rs
src/modules/: export.rs  library.rs  mod.rs  preview.rs  timeline.rs
