[package]
name    = "velocut-ui"
version = "0.1.6"
edition = "2021"
rust-version = "1.80"

[[bin]]
name = "velocut"
path = "src/main.rs"

[dependencies]
velocut-core  = { path = "../velocut-core" }
velocut-media = { path = "../velocut-media" }

egui              = { workspace = true }
eframe            = { workspace = true }
egui_extras       = { workspace = true }
serde             = { workspace = true }
uuid              = { workspace = true }
rfd               = { workspace = true }
ffmpeg-the-third  = { workspace = true }
rodio             = { workspace = true }
png               = { workspace = true }

[build-dependencies]
winresource = "0.1"