[package]
name    = "velocut-ui"
version = "0.1.7"
edition = "2021"
rust-version = "1.87"

[[bin]]
name = "velocut"
path = "src/main.rs"

[dependencies]
velocut-core  = { path = "../velocut-core" }
velocut-media = { path = "../velocut-media" }

egui              = { workspace = true }
eframe            = { workspace = true }
egui_extras       = { workspace = true }
serde             = { workspace = true }
uuid              = { workspace = true }
rfd               = { workspace = true }
ffmpeg-the-third  = { workspace = true }
rodio             = { workspace = true }
png               = { workspace = true }

[build-dependencies]
winresource = { version = "0.1", optional = true }

[features]
default = []
# Windows-only: embeds the .ico icon into the .exe resources.
# Disabled by default — the Windows CI job enables it via
# --features velocut-ui/winresource. Non-Windows builds skip it so they
# don't pull in winresource (which only targets Windows).
winresource = ["dep:winresource"]